--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "dayjs": "^1.11.10",
         "exceljs": "^4.4.0",
         "express-basic-auth": "^1.2.1",
+        "handlebars": "^4.7.8",
         "joi": "^17.11.0",
         "nest-winston": "^1.9.4",
         "nodemailer": "^6.9.5",
