--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "packageManager": "pnpm@8.7.1",
     "scripts": {
         "prebuild": "rimraf dist",
-        "build": "nest build && tsc-alias",
-        "dev": "nest start --watch",
-        "debug": "nest start --debug --watch",
+        "build": "nest build",
+        "dev": "nest start -w",
+        "debug": "nest start -d -w",
         "prod": "node dist/src/main.js",
         "test": "jest",
-        "test:e2e": "jest --config jest-e2e.json --runInBand",
-        "coverage": "jest --coverage"
+        "test:coverage": "jest --coverage",
+        "test:unit": "jest --config jest.unit.config.json --passWithNoTests",
+        "test:integration": "jest --config jest.integration.config.json --passWithNoTests",
+        "test:e2e": "jest --config jest.e2e.config.json --passWithNoTests"
     },
     "dependencies": {
         "@aws-sdk/client-s3": "^3.425.0",
