--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "scripts": {
         "prebuild": "rimraf dist",
         "build": "nest build",
-        "dev": "nest start -w",
-        "debug": "nest start -d -w",
+        "dev": "pnpm prebuild && nest start -w",
+        "debug": "pnpm prebuild && nest start -d -w",
         "prod": "node dist/src/main.js",
         "test": "jest",
         "test:coverage": "jest --coverage",
@@ -32,7 +32,7 @@
         "@nestjs/schedule": "^3.0.4",
         "@nestjs/swagger": "^7.1.13",
         "@prisma/client": "^5.10.2",
-        "axios": "^1.5.1",
+        "axios": "^1.7.4",
         "builder-pattern": "^2.2.0",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.0",
