--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     },
     "dependencies": {
         "@aws-sdk/client-s3": "^3.425.0",
+        "@nestjs-cls/transactional": "^2.4.10",
+        "@nestjs-cls/transactional-adapter-prisma": "^1.2.13",
         "@nestjs-modules/mailer": "^1.9.1",
         "@nestjs/axios": "^3.0.0",
         "@nestjs/common": "^10.2.7",
@@ -43,6 +45,7 @@
         "handlebars": "^4.7.8",
         "joi": "^17.11.0",
         "nest-winston": "^1.9.4",
+        "nestjs-cls": "^5.2.0",
         "nodemailer": "^6.9.5",
         "passport": "^0.6.0",
         "passport-jwt": "^4.0.1",
