--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "packageManager": "pnpm@8.7.1",
     "scripts": {
         "prebuild": "rimraf dist",
-        "build": "nest build",
-        "dev": "pnpm prebuild && nest start -w",
-        "debug": "pnpm prebuild && nest start -d -w",
-        "prod": "node dist/src/main.js",
+        "build": "swc src prisma --out-dir dist && prisma generate",
+        "boot": "node dist/src/main.js",
+        "dev": "pnpm prebuild && pnpm build && pnpm boot",
+        "prod": "pnpm prebuild && pnpm build && pnpm boot",
         "test": "jest",
         "test:coverage": "jest --coverage",
         "test:unit": "jest --config jest.unit.config.json --passWithNoTests",
@@ -63,6 +63,8 @@
         "@nestjs/cli": "^10.1.18",
         "@nestjs/schematics": "^10.0.2",
         "@nestjs/testing": "^10.2.7",
+        "@swc/cli": "^0.6.0",
+        "@swc/core": "^1.10.16",
         "@trivago/prettier-plugin-sort-imports": "^4.3.0",
         "@types/express": "^4.17.18",
         "@types/jest": "29.5.5",
