--- a/.prettierrc
+++ b/.prettierrc
@@ -3,7 +3,7 @@
     "tabWidth": 4,
     "useTabs": false,
     "semi": true,
-    "singleQuote": false,
+    "singleQuote": true,
     "quoteProps": "consistent",
     "trailingComma": "es5",
     "bracketSpacing": true,
