--- a/package.json
+++ b/package.json
@@ -8,15 +8,17 @@
     "packageManager": "pnpm@8.7.1",
     "scripts": {
         "prebuild": "rimraf dist",
-        "build": "swc src prisma --out-dir dist && prisma generate",
         "boot": "node dist/src/main.js",
-        "dev": "pnpm prebuild && pnpm build && pnpm boot",
+        "dev": "pnpm prebuild && prisma generate && nest start -w",
+        "prod:build": "swc src prisma --out-dir dist && prisma generate",
         "prod": "pnpm prebuild && pnpm build && pnpm boot",
-        "test": "jest",
-        "test:coverage": "jest --coverage",
-        "test:unit": "jest --config jest.unit.config.json --passWithNoTests",
-        "test:integration": "jest --config jest.integration.config.json --passWithNoTests",
-        "test:e2e": "jest --config jest.e2e.config.json --passWithNoTests"
+        "lint": "eslint src/",
+        "lint:fix": "eslint src/ --fix",
+        "test": "vitest",
+        "test:coverage": "vitest run --coverage",
+        "test:unit": "vitest run test/unit",
+        "test:integration": "vitest run test/integration",
+        "test:e2e": "vitest run test/e2e"
     },
     "dependencies": {
         "@aws-sdk/client-s3": "^3.425.0",
@@ -59,7 +61,6 @@
         "winston-daily-rotate-file": "^4.7.1"
     },
     "devDependencies": {
-        "@johanblumenberg/ts-mockito": "^1.0.41",
         "@nestjs/cli": "^10.1.18",
         "@nestjs/schematics": "^10.0.2",
         "@nestjs/testing": "^10.2.7",
@@ -67,28 +68,27 @@
         "@swc/core": "^1.10.16",
         "@trivago/prettier-plugin-sort-imports": "^4.3.0",
         "@types/express": "^4.17.18",
-        "@types/jest": "29.5.5",
         "@types/multer": "^1.4.8",
         "@types/node": "^20.8.2",
         "@types/nodemailer": "^6.4.11",
         "@types/passport-jwt": "^3.0.10",
-        "@types/supertest": "^2.0.14",
+        "@types/supertest": "^2.0.16",
         "@types/uuid": "^9.0.4",
         "@typescript-eslint/eslint-plugin": "^6.7.4",
         "@typescript-eslint/parser": "^6.7.4",
+        "@vitest/coverage-v8": "^3.0.5",
         "eslint": "^8.50.0",
         "eslint-config-prettier": "^9.0.0",
         "eslint-plugin-prettier": "^5.0.0",
-        "jest": "29.7.0",
-        "jest-mock-extended": "^3.0.5",
         "prettier": "^3.0.3",
         "source-map-support": "^0.5.21",
-        "supertest": "^6.3.3",
-        "ts-jest": "29.1.1",
+        "supertest": "^6.3.4",
         "ts-loader": "^9.4.4",
         "ts-node": "^10.9.1",
         "tsc-alias": "^1.8.8",
         "tsconfig-paths": "4.2.0",
-        "typescript": "^5.2.2"
+        "typescript": "^5.2.2",
+        "vite-tsconfig-paths": "^5.1.4",
+        "vitest": "^3.0.5"
     }
 }
