feat: dockerignore 수정 및 lint 추가 수정

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,17 +1,18 @@
-node_modules
 dist
+http
 logs
+node_modules
 test
 
 .git
 .github/**
-http
-deployment/**
-.eslintrc.js
-.prettierrc.js
-Readme.md
-env.example
-jest-**.json
-jest.**.json
-.gitignore
 .dockerignore
+env.example
+.eslintrc.js
+.gitignore
+.prettierrc
+.swcrc
+Dockerfile
+nest-cli.json
+README.md
+vitest.config.mts
