feat: race condition test를 위한 vitest 적용

--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
         "prod": "pnpm prebuild && pnpm build && pnpm boot",
         "lint": "eslint src/",
         "lint:fix": "eslint src/ --fix",
-        "test": "vitest",
-        "test:coverage": "vitest run --coverage",
-        "test:unit": "vitest run test/unit",
-        "test:integration": "vitest run test/integration",
-        "test:e2e": "vitest run test/e2e"
+        "test": "NODE_ENV=test vitest",
+        "test:coverage": "NODE_ENV=test vitest run --coverage",
+        "test:unit": "NODE_ENV=test vitest run test/unit",
+        "test:integration": "NODE_ENV=test vitest run test/integration",
+        "test:e2e": "NODE_ENV=test vitest run test/e2e"
     },
     "dependencies": {
         "@aws-sdk/client-s3": "^3.425.0",
@@ -88,6 +88,7 @@
         "tsc-alias": "^1.8.8",
         "tsconfig-paths": "4.2.0",
         "typescript": "^5.2.2",
+        "unplugin-swc": "^1.5.1",
         "vite-tsconfig-paths": "^5.1.4",
         "vitest": "^3.0.5"
     }
