--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
         "prod": "pnpm prebuild && pnpm build && pnpm boot",
         "lint": "eslint src/",
         "lint:fix": "eslint src/ --fix",
-        "test": "NODE_ENV=test vitest",
-        "test:coverage": "NODE_ENV=test vitest run --coverage",
-        "test:unit": "NODE_ENV=test vitest run test/unit",
-        "test:integration": "NODE_ENV=test vitest run test/integration",
-        "test:e2e": "NODE_ENV=test vitest run test/e2e"
+        "test": "NODE_ENV=test jest --forceExit --config jest.json",
+        "coverage": "NODE_ENV=test jest --coverage",
+        "unit": "NODE_ENV=test vitest run test/unit",
+        "integration": "NODE_ENV=test jest --forceExit --config jest.json test/integration",
+        "e2e": "NODE_ENV=test jest --forceExit --config ./jest.e2e.json test/e2e"
     },
     "dependencies": {
         "@aws-sdk/client-s3": "^3.425.0",
@@ -68,6 +68,7 @@
         "@swc/core": "^1.10.16",
         "@trivago/prettier-plugin-sort-imports": "^4.3.0",
         "@types/express": "^4.17.18",
+        "@types/jest": "^29.5.14",
         "@types/multer": "^1.4.8",
         "@types/node": "^20.8.2",
         "@types/nodemailer": "^6.4.11",
@@ -80,15 +81,16 @@
         "eslint": "^8.50.0",
         "eslint-config-prettier": "^9.0.0",
         "eslint-plugin-prettier": "^5.0.0",
+        "jest": "^29.7.0",
         "prettier": "^3.0.3",
         "source-map-support": "^0.5.21",
         "supertest": "^6.3.4",
+        "ts-jest": "^29.2.5",
         "ts-loader": "^9.4.4",
         "ts-node": "^10.9.1",
         "tsc-alias": "^1.8.8",
         "tsconfig-paths": "4.2.0",
         "typescript": "^5.2.2",
-        "unplugin-swc": "^1.5.1",
         "vite-tsconfig-paths": "^5.1.4",
         "vitest": "^3.0.5"
     }
