feat: 분산락 적용 전 라이브러리 변경

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@aws-sdk/client-s3": "^3.425.0",
         "@nestjs-cls/transactional": "^2.4.10",
         "@nestjs-cls/transactional-adapter-prisma": "^1.2.13",
+        "@nestjs-modules/ioredis": "^2.0.2",
         "@nestjs-modules/mailer": "^1.9.1",
         "@nestjs/axios": "^3.0.0",
         "@nestjs/common": "^10.2.7",
@@ -46,6 +47,7 @@
         "exceljs": "^4.4.0",
         "express-basic-auth": "^1.2.1",
         "handlebars": "^4.7.8",
+        "ioredis": "^5.5.0",
         "joi": "^17.11.0",
         "nest-winston": "^1.9.4",
         "nestjs-cls": "^5.2.0",
@@ -53,7 +55,6 @@
         "passport": "^0.6.0",
         "passport-jwt": "^4.0.1",
         "prisma": "^5.10.2",
-        "redis": "^4.6.10",
         "reflect-metadata": "^0.1.13",
         "rimraf": "^5.0.5",
         "rxjs": "^7.8.1",
