--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "author": "Dong Chul Choi",
     "private": true,
     "license": "UNLICENSED",
-    "packageManager": "pnpm@8.7.1",
+    "packageManager": "pnpm@10.11.0",
     "scripts": {
         "prebuild": "rimraf dist",
         "boot": "node dist/src/main.js",
@@ -21,79 +21,82 @@
         "e2e": "NODE_ENV=test jest --forceExit --config ./jest.e2e.json test/e2e"
     },
     "dependencies": {
-        "@aws-sdk/client-s3": "^3.425.0",
-        "@nestjs-cls/transactional": "^2.4.10",
-        "@nestjs-cls/transactional-adapter-prisma": "^1.2.13",
+        "@aws-sdk/client-s3": "^3.828.0",
+        "@nestjs-cls/transactional": "^3.0.2",
+        "@nestjs-cls/transactional-adapter-prisma": "^1.2.23",
         "@nestjs-modules/ioredis": "^2.0.2",
-        "@nestjs-modules/mailer": "^1.9.1",
-        "@nestjs/axios": "^3.0.0",
-        "@nestjs/common": "^10.2.7",
-        "@nestjs/config": "^3.1.1",
-        "@nestjs/core": "^10.2.7",
-        "@nestjs/cqrs": "^10.2.6",
-        "@nestjs/jwt": "^10.1.1",
-        "@nestjs/passport": "^10.0.2",
-        "@nestjs/platform-express": "^10.2.7",
-        "@nestjs/schedule": "^3.0.4",
-        "@nestjs/swagger": "^7.1.13",
-        "@prisma/client": "^5.10.2",
+        "@nestjs-modules/mailer": "^2.0.2",
+        "@nestjs/axios": "^4.0.0",
+        "@nestjs/common": "^11.1.3",
+        "@nestjs/config": "^4.0.2",
+        "@nestjs/core": "^11.1.3",
+        "@nestjs/cqrs": "^11.0.3",
+        "@nestjs/jwt": "^11.0.0",
+        "@nestjs/passport": "^11.0.5",
+        "@nestjs/platform-express": "^11.1.3",
+        "@nestjs/schedule": "^6.0.0",
+        "@nestjs/swagger": "^11.2.0",
+        "@prisma/client": "^6.9.0",
         "async-mutex": "^0.5.0",
-        "axios": "^1.7.4",
+        "axios": "^1.9.0",
         "builder-pattern": "^2.2.0",
         "class-transformer": "^0.5.1",
-        "class-validator": "^0.14.0",
-        "cron": "^3.0.0",
-        "dayjs": "^1.11.10",
+        "class-validator": "^0.14.2",
+        "cron": "^4.3.1",
+        "dayjs": "^1.11.13",
         "exceljs": "^4.4.0",
         "express-basic-auth": "^1.2.1",
         "handlebars": "^4.7.8",
-        "ioredis": "^5.5.0",
-        "joi": "^17.11.0",
-        "nest-winston": "^1.9.4",
-        "nestjs-cls": "^5.2.0",
-        "nodemailer": "^6.9.5",
-        "passport": "^0.6.0",
+        "ioredis": "^5.6.1",
+        "joi": "^17.13.3",
+        "nest-winston": "^1.10.2",
+        "nestjs-cls": "^6.0.1",
+        "nodemailer": "^7.0.3",
+        "passport": "^0.7.0",
         "passport-jwt": "^4.0.1",
-        "prisma": "^5.10.2",
-        "reflect-metadata": "^0.1.13",
-        "rimraf": "^5.0.5",
-        "rxjs": "^7.8.1",
-        "uuid": "^9.0.1",
-        "winston": "^3.10.0",
-        "winston-daily-rotate-file": "^4.7.1"
+        "prisma": "^6.9.0",
+        "reflect-metadata": "^0.2.2",
+        "rimraf": "^6.0.1",
+        "rxjs": "^7.8.2",
+        "uuid": "^11.1.0",
+        "winston": "^3.17.0",
+        "winston-daily-rotate-file": "^5.0.0"
     },
     "devDependencies": {
-        "@nestjs/cli": "^10.1.18",
-        "@nestjs/schematics": "^10.0.2",
-        "@nestjs/testing": "^10.2.7",
-        "@swc/cli": "^0.6.0",
-        "@swc/core": "^1.10.16",
-        "@trivago/prettier-plugin-sort-imports": "^4.3.0",
-        "@types/express": "^4.17.18",
+        "@eslint/eslintrc": "^3.3.1",
+        "@eslint/js": "^9.28.0",
+        "@nestjs/cli": "^11.0.7",
+        "@nestjs/schematics": "^11.0.5",
+        "@nestjs/testing": "^11.1.3",
+        "@swc/cli": "^0.7.7",
+        "@swc/core": "^1.12.1",
+        "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+        "@types/express": "^5.0.3",
         "@types/jest": "^29.5.14",
-        "@types/multer": "^1.4.8",
-        "@types/node": "^20.8.2",
-        "@types/nodemailer": "^6.4.11",
-        "@types/passport-jwt": "^3.0.10",
-        "@types/supertest": "^2.0.16",
-        "@types/uuid": "^9.0.4",
-        "@typescript-eslint/eslint-plugin": "^6.7.4",
-        "@typescript-eslint/parser": "^6.7.4",
-        "@vitest/coverage-v8": "^3.0.5",
-        "eslint": "^8.50.0",
-        "eslint-config-prettier": "^9.0.0",
-        "eslint-plugin-prettier": "^5.0.0",
-        "jest": "^29.7.0",
-        "prettier": "^3.0.3",
+        "@types/multer": "^1.4.13",
+        "@types/node": "^22.15.31",
+        "@types/nodemailer": "^6.4.17",
+        "@types/passport-jwt": "^4.0.1",
+        "@types/supertest": "^6.0.3",
+        "@types/uuid": "^10.0.0",
+        "@typescript-eslint/eslint-plugin": "^8.34.0",
+        "@typescript-eslint/parser": "^8.34.0",
+        "@vitest/coverage-v8": "^3.2.3",
+        "eslint": "^9.28.0",
+        "eslint-config-prettier": "^10.1.5",
+        "eslint-plugin-prettier": "^5.4.1",
+        "globals": "^16.2.0",
+        "jest": "^30.0.0",
+        "prettier": "^3.5.3",
         "source-map-support": "^0.5.21",
-        "supertest": "^6.3.4",
-        "ts-jest": "^29.2.5",
-        "ts-loader": "^9.4.4",
-        "ts-node": "^10.9.1",
-        "tsc-alias": "^1.8.8",
-        "tsconfig-paths": "4.2.0",
-        "typescript": "^5.2.2",
+        "supertest": "^7.1.1",
+        "ts-jest": "^29.4.0",
+        "ts-loader": "^9.5.2",
+        "ts-node": "^10.9.2",
+        "tsc-alias": "^1.8.16",
+        "tsconfig-paths": "^4.2.0",
+        "typescript": "^5.8.3",
         "vite-tsconfig-paths": "^5.1.4",
-        "vitest": "^3.0.5"
+        "vitest": "^3.2.3"
     }
 }
