--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@nestjs-modules/ioredis": "^2.0.2",
         "@nestjs-modules/mailer": "^2.0.2",
         "@nestjs/axios": "^4.0.0",
+        "@nestjs/bullmq": "^11.0.2",
         "@nestjs/common": "^11.1.3",
         "@nestjs/config": "^4.0.2",
         "@nestjs/core": "^11.1.3",
@@ -40,9 +41,12 @@
         "@nestjs/schedule": "^6.0.0",
         "@nestjs/swagger": "^11.2.0",
         "@prisma/client": "^6.9.0",
+        "@swc/cli": "^0.7.7",
+        "@swc/core": "^1.12.1",
         "async-mutex": "^0.5.0",
         "axios": "^1.9.0",
         "builder-pattern": "^2.2.0",
+        "bullmq": "^5.56.1",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.2",
         "cron": "^4.3.1",
@@ -55,11 +59,10 @@
         "nest-winston": "^1.10.2",
         "nestjs-cls": "^6.0.1",
         "nodemailer": "^7.0.3",
-        "@swc/cli": "^0.7.7",
-        "@swc/core": "^1.12.1",
         "passport": "^0.7.0",
         "passport-jwt": "^4.0.1",
         "prisma": "^6.9.0",
+        "redlock": "^4.2.0",
         "reflect-metadata": "^0.2.2",
         "rimraf": "^6.0.1",
         "rxjs": "^7.8.2",
