--- a/jest.config.json
+++ b/jest.config.json
@@ -1,5 +1,6 @@
 {
   "moduleFileExtensions": ["js", "json", "ts"],
+  "passWithNoTests": true,
   "rootDir": ".",
   "testEnvironment": "node",
   "testRegex": ".test.ts$",
