build: sonar properties add

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,7 @@
 sonar.projectKey=dc-choi_nestjs-prisma-demo
 sonar.projectName=nestjs-prisma-demo
+sonar.organization=dc-choi
+sonar.host.url=https://sonarcloud.io
 sonar.projectVersion=1.0
 
 # Source code
