--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
         "class-validator": "^0.14.2",
         "cron": "^4.3.1",
         "dayjs": "^1.11.13",
+        "es-toolkit": "^1.39.7",
         "exceljs": "^4.4.0",
         "express-basic-auth": "^1.2.1",
         "handlebars": "^4.7.8",
