--- a/package.json
+++ b/package.json
@@ -56,14 +56,18 @@
         "exceljs": "^4.4.0",
         "express-basic-auth": "^1.2.1",
         "handlebars": "^4.7.8",
+        "install": "^0.13.0",
         "ioredis": "^5.6.1",
         "joi": "^17.13.3",
+        "kysely": "^0.28.8",
         "nest-winston": "^1.10.2",
         "nestjs-cls": "^6.0.1",
         "nodemailer": "^7.0.3",
         "passport": "^0.7.0",
         "passport-jwt": "^4.0.1",
         "prisma": "^6.14.0",
+        "prisma-extension-kysely": "^3.0.0",
+        "prisma-kysely": "^2.2.1",
         "redlock": "^4.2.0",
         "reflect-metadata": "^0.2.2",
         "rimraf": "^6.0.1",
