--- a/package.json
+++ b/package.json
@@ -40,8 +40,9 @@
         "@nestjs/platform-express": "^11.1.3",
         "@nestjs/schedule": "^6.0.0",
         "@nestjs/swagger": "^11.2.0",
-        "@prisma/adapter-mariadb": "^6.12.0",
-        "@prisma/client": "^6.14.0",
+        "@prisma/adapter-mariadb": "^6.19.0",
+        "@prisma/client": "^6.19.0",
+        "@prisma/extension-read-replicas": "^0.4.1",
         "@swc/cli": "^0.7.7",
         "@swc/core": "^1.12.1",
         "async-mutex": "^0.5.0",
@@ -65,7 +66,7 @@
         "nodemailer": "^7.0.3",
         "passport": "^0.7.0",
         "passport-jwt": "^4.0.1",
-        "prisma": "^6.14.0",
+        "prisma": "^6.19.0",
         "prisma-extension-kysely": "^3.0.0",
         "prisma-kysely": "^2.2.1",
         "redlock": "^4.2.0",
